--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # change the followings to match your Github username and repo name
-baseurl: "/tailpages" # the name of your github repo
-url: "https://harrywang.github.io" # the url of your github pages
+baseurl: "/TTRPG" # the name of your github repo
+url: "https://philip007.github.io/TTRPG-maker-space" # the url of your github pages
 
 # site information used in page title, meta data etc.
-title: "Tailpages: Tailwind + Github Pages"
-description: A Github Pages (Jekyll) template based on TailwindCSS
+title: "The TTRPG Maker Space"
+description: A collection of thoughts and links for TTRPG designers by Phil.
 
 # color theme for links
-theme-color: indigo # indigo|yellow|pink|green|stone|
+theme-color: pink # indigo|yellow|pink|green|stone|
 
 # homepage information
-author: Satoshi Nakamoto
-author-bio: Creator of Bitcoin  # change to false to hide
+author: Philip Jensen
+author-bio: Art Director by day, TTRPG Creator by Night  # change to false to hide
 author-image: 279.png  # file must be in the /assets/img/ folder
 
 # navigation menu
